# replicate-python

./: .gitattributes  .gitignore  .python-version  CONTRIBUTING.md  README.md  belformats  inbal  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yaml  release.yaml
docs/replicate/: account.md  client.md  collection.md  deployment.md  exceptions.md  files.md  hardware.md  identifier.md  index.md  json.md  model.md  pagination.md  prediction.md  resource.md  run.md  schema.md  stream.md  training.md  version.md
replicate/: __about__.py  __init__.py  account.py  base_model.py  client.py  collection.py  deployment.py  exceptions.py  file.py  files.py  hardware.py  helpers.py  identifier.py  include.py  json.py  model.py  pagination.py  prediction.py  proxy.py  resource.py  run.py  schema.py  stream.py  training.py  use.py  version.py  webhook.py
script/: format  lint  setup  test
tests/: conftest.py  factories.py  test_account.py  test_async.py  test_client.py  test_collection.py  test_deployment.py  test_file.py  test_hardware.py  test_helpers.py  test_identifier.py  test_include.py  test_json.py  test_model.py  test_pagination.py  test_prediction.py  test_run.py  test_stream.py  test_training.py  test_use.py  test_version.py  test_webhooks.py
tests/cassettes/: collections-get.yaml  collections-list.yaml  file-operations.yaml  file-prediction.yaml  hardware-list.yaml  models-create.yaml  models-get.yaml  models-list.yaml  models-predictions-create.yaml  models-search.yaml  models-versions-get.yaml  models-versions-list.yaml  predictions-cancel.yaml  predictions-create.yaml  predictions-get.yaml  predictions-stream.yaml  run-concurrently.yaml  run.yaml  run__concurrently.yaml  run__invalid-token.yaml  test_models_get.yaml  test_models_list.yaml  test_models_predictions_create_blocking[False-10].yaml  test_models_predictions_create_blocking[False-True].yaml  test_models_predictions_create_blocking[True-10].yaml  test_models_predictions_create_blocking[True-True].yaml  test_predictions_cancel[False].yaml  test_predictions_cancel[True].yaml  test_predictions_create_blocking[False-10].yaml  test_predictions_create_blocking[False-True].yaml  test_predictions_create_blocking[True-10].yaml  test_predictions_create_blocking[True-True].yaml  test_predictions_create_by_model[False].yaml  test_predictions_create_by_model[True].yaml  test_run_without_token.yaml  trainings-cancel.yaml  trainings-create.yaml  trainings-create__invalid-destination.yaml  trainings-get.yaml
