[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replicate"
version = "0.13.0"
description = "Python client for Replicate"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Replicate, Inc." }]
requires-python = ">=3.8"
dependencies = ["packaging", "pydantic>1", "requests>2"]
optional-dependencies = { dev = [
    "black",
    "mypy",
    "pytest",
    "responses",
    "ruff",
] }

[project.urls]
homepage = "https://replicate.com"
repository = "https://github.com/replicate/replicate-python"

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.setuptools.package-data]
"replicate" = ["py.typed"]

[tool.mypy]
plugins = "pydantic.mypy"
exclude = ["tests/"]

[tool.ruff]
select = [
    "E",   # pycodestyle error
    "F",   # Pyflakes
    "I",   # isort
    "W",   # pycodestyle warning
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "ANN", # flake8-annotations
]
ignore = [
    "E501",   # Line too long
    "S113",   # Probable use of requests call without timeout
    "ANN001", # Missing type annotation for function argument
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101",   # Use of assert
    "S106",   # Possible use of hard-coded password function arguments
    "ANN201", # Missing return type annotation for public function
]
