[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replicate"
version = "0.26.1"
description = "Python client for Replicate"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Replicate, Inc." }]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.21.0,<1",
    "packaging",
    "pydantic>1.10.7",
    "typing_extensions>=4.5.0",
]
optional-dependencies = { dev = [
    "pylint",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-recording",
    "respx",
    "ruff>=0.3.3",
] }

[project.urls]
homepage = "https://replicate.com"
repository = "https://github.com/replicate/replicate-python"

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.setuptools]
packages = ["replicate"]

[tool.setuptools.package-data]
"replicate" = ["py.typed"]

[tool.pylint.main]
disable = [
    "C0301", # Line too long
    "C0413", # Import should be placed at the top of the module
    "C0114", # Missing module docstring
    "R0801", # Similar lines in N files
    "W0212", # Access to a protected member
    "W0622", # Redefining built-in
    "R0903", # Too few public methods
]
good-names = ["id"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle error
    "F",   # Pyflakes
    "I",   # isort
    "W",   # pycodestyle warning
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "ANN", # flake8-annotations
]
ignore = [
    "E501",   # Line too long
    "S113",   # Probable use of requests call without timeout
    "ANN001", # Missing type annotation for function argument
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "W191",   # Indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Use of assert
    "S106",   # Possible use of hard-coded password function arguments
    "ANN201", # Missing return type annotation for public function
]
